issues with mongo

--- a/kgconfig.json
+++ b/kgconfig.json
@@ -1,5 +1,5 @@
 {
- "GRAPHDB_BASE_URL": "http://185.190.206.133:7200",
+ "GRAPHDB_BASE_URL": "http://graphdb:7200",
  "GRAPHDB_REPOSITORY": "intent",
  "GRAPHDB_ISSUE_REPOSITORY": "issue",
  "GRAPHDB_USERNAME": "Test",
