--- a/config.json
+++ b/config.json
@@ -9,5 +9,5 @@
 "alarm_url_hal": "/api/",
 
 "strict_schema": true,
-"pythonServer": "http://localhost:8088"
+"pythonServer": "http://intent-py:8088"
 }
