--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,6 +3,7 @@
     "configurations": [
       {
         "type": "node",
+//        "runtimeVersion": "12.22.12",
         "request": "launch",
         "name": "Launch Program",
         "skipFiles": ["<node_internals>/**"],
