--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,10 @@
         "request": "launch",
         "name": "Launch Program",
         "skipFiles": ["<node_internals>/**"],
-        "program": "${workspaceFolder}\\index.js"
+        "program": "${workspaceFolder}\\index.js",
+        "env": {
+          "GRAPHQL_ENGINE_URL": "10.220.239.74"
+       }
       }
     ]
   }
