--- a/package.json
+++ b/package.json
@@ -25,10 +25,11 @@
     "commander": "^2.6.0",
     "connect": "^3.2.0",
     "express": "^4.15.3",
-    "graphql": "^16.4.0",
+    "graphql": "^16.8.0",
     "http-post": "^0.1.1",
     "http-proxy": "^1.8.1",
     "js-yaml": "^3.3.0",
+    "mathjs": "^11.11.0",
     "mongodb": "^3.1.1",
     "query-to-mongo": "^0.9.0",
     "rdflib": "^2.2.19",
