--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,8 @@
         "skipFiles": ["<node_internals>/**"],
         "program": "${workspaceFolder}\\index.js",
         "env": {
-          "GRAPHQL_ENGINE_URL": "10.220.239.74"
+          "GRAPHQL_ENGINE_URL": "10.220.239.74",
+          "SEND_RESOURCE_INTENT": true
        }
       }
     ]
